--- a/slides/1.intro.md
+++ b/slides/1.intro.md
@@ -3,6 +3,6 @@ layout: center
 hideInToc: true
 ---
 
-# Customize your Astro project with integrations
+# Customize your <span class="text-gradient font-normal">Astro</span> project with integrations
 
 TheJam.dev 2025 - Florian Lefebvre
