--- a/slides/1.0.what-is-astro.md
+++ b/slides/1.0.what-is-astro.md
@@ -6,9 +6,11 @@ layout: center
 
 Astro is the web framework for <span class="text-gradient">**content-driven**</span> websites, batteries included
 
+TODO: remove list
+
 1. Islands architecture
 2. UI agnostic
 3. Server first
 4. Zero js by default
 5. Content collections
-6. **Customizable**
+6. Customizable
