feat: remove toc

--- a/slides/1.0.what-is-astro.md
+++ b/slides/1.0.what-is-astro.md
@@ -2,7 +2,7 @@
 layout: center
 ---
 
-# What is Astro?
+# 1. What is Astro?
 
 Astro is the web framework for <span class="text-gradient">**content-driven**</span> websites, batteries included
 
