--- a/slides/1.1.islands.md
+++ b/slides/1.1.islands.md
@@ -2,7 +2,7 @@
 hideInToc: true
 ---
 
-# Islands architecture
+# 1.1. Islands architecture
 
 Render the majority of your page to fast, static HTML with smaller “islands” of JavaScript added when interactivity or personalization is needed on the page.
 
