--- a/slides/1.0.what-is-astro.md
+++ b/slides/1.0.what-is-astro.md
@@ -8,8 +8,8 @@ Astro is the web framework for <span class="text-gradient">**content-driven**</s
 
 TODO: remove list
 
-1. Islands architecture
-2. UI agnostic
+1. ~~Islands architecture~~
+2. ~~UI agnostic~~
 3. Server first
 4. Zero js by default
 5. Content collections
