feat: server first

--- a/slides/1.0.what-is-astro.md
+++ b/slides/1.0.what-is-astro.md
@@ -10,7 +10,7 @@ TODO: remove list
 
 1. ~~Islands architecture~~
 2. ~~UI agnostic~~
-3. Server first
+3. ~~Server first~~
 4. Zero js by default
 5. Content collections
 6. Customizable
