--- a/slides/1.1.islands.md
+++ b/slides/1.1.islands.md
@@ -1,10 +1,7 @@
----
-hideInToc: true
----
-
 # 1.1. Islands architecture
 
-Render the majority of your page to fast, static HTML with <span class="text-gradient">**smaller islands of JavaScript**</span> added when interactivity or personalization is needed on the page.
+- Render the majority of your page to fast, static HTML
+- Add <span class="text-gradient">**smaller islands of JavaScript**</span> when interactivity or personalization is needed
 
 <div class="grid grid-cols-3 grid-rows-5 gap-2 text-center content-center [&>div]:(flex items-center justify-center)">
     <div class="col-span-3 bg-[#6c33] border-2 border-[#50743ecc] p-2">Header (interactive island)</div>
@@ -13,3 +10,6 @@ Render the majority of your page to fast, static HTML with <span class="text-gra
     <div class="col-span-2 bg-[#e619a133] border-2 border-[#743e62cc] p-2">Image carousel (interactive island)</div>
     <div class="col-span-3 border-2 border-zinc-500 bg-zinc-900 p-2">Footer (static HTML)</div>
 </div>
+
+
+<!-- TODO: notes -->
