--- a/slides/1.2.server-first.md
+++ b/slides/1.2.server-first.md
@@ -1,39 +1,38 @@
 # 1.2. Server first
 
-Your Astro project code <span class="text-gradient">**must be rendered to HTML**</span> in order to be displayed on the web.
+- Astro pages, routes, and API endpoints <span class="text-gradient">**will be pre-rendered at build time by default**</span>
+- However, you can choose to render some or all of your routes on demand by a server when a route is requested
 
-Astro pages, routes, and API endpoints will be pre-rendered at build time by default. However, you can choose to render some or all of your routes on demand by a server when a route is requested.
+    ```astro
+    ---
+    export const prerender = false
+    ---
+    <html>
+    <!-- This content will be server-rendered on demand! All other pages are statically-generated at build time! -->
+    <html>
+    ```
 
-```astro
----
-export const prerender = false
----
-<html>
-<!-- This content will be server-rendered on demand! All other pages are statically-generated at build time! -->
-<html>
-```
+- Just add an <span class="text-gradient">**adapter**</span> for a server runtime:
 
-Just add an <span class="text-gradient">**adapter**</span> for a server runtime:
+    <div class="flex gap-8">
 
-<div class="flex gap-8">
+    <AdapterCard name="Cloudflare">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="#F38020" viewBox="0 0 48 48"><path d="m21.4 7.5-2 3H9v27h8.7l-.5 3H7.5L6 39V9l1.5-1.5h13.9zm9.4 0h9.7L42 9v30l-1.5 1.5H26.6l2-3H39v-27h-8.7l.5-3z"/><path d="M21.4 28.5h-8.6l-1.3-2.3L27 2.2l2.7 1.1-3.3 16.2h8.7l1.3 2.3-15.6 24-2.7-1.1 3.2-16.2zM11.3 13.7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm2.8 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm2.7 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+    </svg>
+    </AdapterCard>
 
-<AdapterCard name="Cloudflare">
-<svg xmlns="http://www.w3.org/2000/svg" fill="#F38020" viewBox="0 0 48 48"><path d="m21.4 7.5-2 3H9v27h8.7l-.5 3H7.5L6 39V9l1.5-1.5h13.9zm9.4 0h9.7L42 9v30l-1.5 1.5H26.6l2-3H39v-27h-8.7l.5-3z"/><path d="M21.4 28.5h-8.6l-1.3-2.3L27 2.2l2.7 1.1-3.3 16.2h8.7l1.3 2.3-15.6 24-2.7-1.1 3.2-16.2zM11.3 13.7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm2.8 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm2.7 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-</svg>
-</AdapterCard>
+    <AdapterCard name="Netlify">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 128 113"><g clip-path="url(#a)"><path fill="#32E6E2" d="M34.6 94h-1.2l-6-6v-1.2l9.2-9.2H43l.8.8v6.4l-9.2 9.3Zm-7.2-68.2v-1.2l6-6h1.2l9.2 9.2v6.4l-.8.8h-6.4l-9.2-9.2Z"/><path fill="#fff" d="M80.5 74.6h-8.8l-.8-.7V53.3c0-3.6-1.4-6.5-5.8-6.6l-7.6.1-.4.5v26.6l-.8.7h-8.8l-.7-.7V38.8l.7-.8h19.8a14 14 0 0 1 13.9 14v21.9l-.7.7Z"/><path fill="#32E6E2" d="M35.8 61.5H.8l-.8-.8V52l.7-.7h35.1l.8.7v8.8l-.8.7Zm91.5 0H92.2l-.8-.8V52l.8-.7h35l.8.7v8.8l-.7.7ZM58.9 27V.7l.8-.7h8.8l.7.7v26.4l-.7.7h-8.8l-.8-.7Zm0 84.8V85.6l.8-.8h8.8l.7.8v26.3l-.7.7h-8.8l-.8-.7Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h128v112.6H0z"/></clipPath></defs></svg>
+    </AdapterCard>
 
-<AdapterCard name="Netlify">
-<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 128 113"><g clip-path="url(#a)"><path fill="#32E6E2" d="M34.6 94h-1.2l-6-6v-1.2l9.2-9.2H43l.8.8v6.4l-9.2 9.3Zm-7.2-68.2v-1.2l6-6h1.2l9.2 9.2v6.4l-.8.8h-6.4l-9.2-9.2Z"/><path fill="#fff" d="M80.5 74.6h-8.8l-.8-.7V53.3c0-3.6-1.4-6.5-5.8-6.6l-7.6.1-.4.5v26.6l-.8.7h-8.8l-.7-.7V38.8l.7-.8h19.8a14 14 0 0 1 13.9 14v21.9l-.7.7Z"/><path fill="#32E6E2" d="M35.8 61.5H.8l-.8-.8V52l.7-.7h35.1l.8.7v8.8l-.8.7Zm91.5 0H92.2l-.8-.8V52l.8-.7h35l.8.7v8.8l-.7.7ZM58.9 27V.7l.8-.7h8.8l.7.7v26.4l-.7.7h-8.8l-.8-.7Zm0 84.8V85.6l.8-.8h8.8l.7.8v26.3l-.7.7h-8.8l-.8-.7Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h128v112.6H0z"/></clipPath></defs></svg>
-</AdapterCard>
+    <AdapterCard name="Node">
+    <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="iconify iconify--logos" viewBox="0 0 256 289"><path fill="#539E43" d="M128 289c-4 0-8-2-11-3l-35-21c-6-3-3-4-1-5l16-7h2l27 16h3l106-61c1 0 2-1 2-3V83l-2-3-106-61h-3L20 80l-1 3v122l1 3 29 17c16 8 26-1 26-11V94c0-2 1-3 3-3h13c2 0 4 1 4 3v120c0 21-12 33-32 33-6 0-11 0-24-6l-28-16a22 22 0 0 1-11-19V83c0-8 4-15 11-19L117 3a24 24 0 0 1 22 0l106 61c7 4 11 11 11 19v123c0 8-4 15-11 19l-106 61a27 27 0 0 1-11 2Zm33-84c-47 0-56-22-56-40 0-1 1-3 3-3h14c1 0 3 1 3 3 2 14 8 21 36 21 22 0 32-5 32-17 0-7-3-12-38-16-29-3-47-9-47-32 0-22 18-34 49-34 34 0 50 11 52 37v2l-3 1h-13c-2 0-3-1-3-2-3-15-12-19-33-19-25 0-28 8-28 14 0 8 4 10 37 15 32 4 48 10 48 33-1 23-20 36-53 36Z"/>
+    </svg>
+    </AdapterCard>
 
-<AdapterCard name="Node">
-<svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="iconify iconify--logos" viewBox="0 0 256 289"><path fill="#539E43" d="M128 289c-4 0-8-2-11-3l-35-21c-6-3-3-4-1-5l16-7h2l27 16h3l106-61c1 0 2-1 2-3V83l-2-3-106-61h-3L20 80l-1 3v122l1 3 29 17c16 8 26-1 26-11V94c0-2 1-3 3-3h13c2 0 4 1 4 3v120c0 21-12 33-32 33-6 0-11 0-24-6l-28-16a22 22 0 0 1-11-19V83c0-8 4-15 11-19L117 3a24 24 0 0 1 22 0l106 61c7 4 11 11 11 19v123c0 8-4 15-11 19l-106 61a27 27 0 0 1-11 2Zm33-84c-47 0-56-22-56-40 0-1 1-3 3-3h14c1 0 3 1 3 3 2 14 8 21 36 21 22 0 32-5 32-17 0-7-3-12-38-16-29-3-47-9-47-32 0-22 18-34 49-34 34 0 50 11 52 37v2l-3 1h-13c-2 0-3-1-3-2-3-15-12-19-33-19-25 0-28 8-28 14 0 8 4 10 37 15 32 4 48 10 48 33-1 23-20 36-53 36Z"/>
-</svg>
-</AdapterCard>
+    <AdapterCard name="Vercel">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 1155 1000"><path d="m577.3 0 577.4 1000h-1154.7z" fill="#fff"/>
+    </svg>
+    </AdapterCard>
 
-<AdapterCard name="Vercel">
-<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 1155 1000"><path d="m577.3 0 577.4 1000h-1154.7z" fill="#fff"/>
-</svg>
-</AdapterCard>
-
-</div>
+    </div>
