--- a/slides/1.1.zero-js.md
+++ b/slides/1.1.zero-js.md
@@ -1,5 +1,24 @@
 # 1.1. Zero JavaScript by default
 
-Astro components are the basic building blocks of any Astro project. They are HTML-only templating components with <span class="text-gradient">**no client-side runtime**</span> and use the `.astro` file extension.
+- Astro components are HTML-only templating components with <span class="text-gradient">**no client-side runtime**</span> and use the `.astro` file extension
+- Astro component syntax is a superset of HTML, using a JSX-like syntax
 
-Astro component syntax is a superset of HTML. The syntax was designed to feel familiar to anyone with experience writing HTML or JSX, and adds support for including components and JavaScript expressions.
+    ```astro
+    ---
+    const { link } = Astro.props
+    ---
+    <div>
+        {link && <a {link}>Astro website</a>}
+    </div>
+    ```
+
+- Add scripts and styles as you need
+
+    ```astro
+    <script>
+    console.log("Hi!")
+    </script>
+    <style>
+    .body { color: white; }
+    </style>
+    ```
