--- a/slides/4.1.what-is-an-integration.md
+++ b/slides/4.1.what-is-an-integration.md
@@ -15,7 +15,7 @@
     }
     ```
 
-- It adds new functionalities and behaviors for your project by hooking into Astro's lifecycle
+- It exposes callbacks and data at a given time during Astro's lifecycle
 
     ```ts
     hooks: {
