--- a/slides/3.1.react.md
+++ b/slides/3.1.react.md
@@ -1,1 +1,26 @@
-# 3.1. React
+# 3.1. React (official)
+
+```sh
+astro add react
+```
+
+Allows to import and use React components:
+
+```tsx
+import { useState } from "react"
+
+export default function Counter(props: { count: number }) {
+  const [count, setCount] = useState(props.count)
+  const add = () => setCount((i) => i + 1)
+
+  return <button onClick={add}>Add 1 to {count}</button>
+}
+```
+
+```astro
+---
+import Counter from '../components/Counter.tsx'
+---
+
+<Counter count={4} client:load />
+```
