--- a/slides/3.2.netlify.md
+++ b/slides/3.2.netlify.md
@@ -1,1 +1,16 @@
-# 3.2. Netlify
+# 3.2. Netlify (official)
+
+```sh
+astro add netlify
+```
+
+- Allows to deploy on-demand rendered routes to Netlify
+- Access edge context
+
+```astro
+---
+const { city } = Astro.locals.netlify.context.geo
+---
+
+<h1>Hello there, friendly visitor from {city}!</h1>
+```
