--- a/slides/3.3.sitemap.md
+++ b/slides/3.3.sitemap.md
@@ -1,1 +1,13 @@
-# 3.3. Sitemap
+# 3.3. Sitemap (official)
+
+```sh
+astro add sitemap
+```
+
+Generates a sitemap based on pages when building.
+
+```
+dist/
+    sitemap-index.xml
+    sitemap-0.xml
+```
