--- a/slides/3.4.starlight.md
+++ b/slides/3.4.starlight.md
@@ -1,1 +1,18 @@
-# 3.4. Starlight
+# 3.4. Starlight (official)
+
+https://starlight.astro.build/
+
+```sh
+astro add starlight
+```
+
+A whole docs framework built on top of Astro. It does everything:
+
+- Injects routes
+- Injects css
+- Injects custom Vite and rehype plugins
+- Injects integrations
+- Has its own plugin system
+- And more...
+
+Source code is still an excellent learning resource today!
