--- a/slides/3.5.custom-routing.md
+++ b/slides/3.5.custom-routing.md
@@ -1,1 +1,30 @@
-# 3.5. Custom routing
+# 3.5. Custom routing (community)
+
+```sh
+astro add @inox-tools/custom-routing
+```
+
+Define routes in your config
+
+```ts
+import { routes } from "./src/routes";
+
+export default defineConfig({
+  integrations: [
+    customRouting({
+      "/": "./src/routes/index.astro",
+      ...routes,
+    }),
+  ],
+});
+```
+
+You can build custom abstractions on top, like React Router v7:
+
+```ts
+export const routes = [
+  route("content", "/blog/[...slug].astro"), // goes to ./src/lib/content/routes/blog/[...slug].astro
+  route("content", "/tag.astro"), // goes to ./src/lib/content/routes/tag/index.astro
+  route("analytics", "/script.js.ts"), // goes to ./src/lib/analytics/routes/script.js.ts
+];
+```
