feat: work on code

--- a/slides/4.1.what-is-an-integration.md
+++ b/slides/4.1.what-is-an-integration.md
@@ -1,6 +1,6 @@
 # 4.1. What **really** is an integration?
 
-- It's an object with a `name` and some `hooks`
+- It's an object with a `name` and some `hooks`, returned by a function by convention
 
     ```ts
     import { AstroIntegration } from "astro"
