feat: work on code

--- a/slides/4.3.code-time.md
+++ b/slides/4.3.code-time.md
@@ -98,15 +98,106 @@ export default function integration(): AstroIntegration {
   };
 }
 ```
-````
 
-<!-- TODO: RESULT -->
+```ts
+import type { AstroIntegration } from "astro";
+import { writeFile } from "node:fs/promises";
+
+export default function integration(): AstroIntegration {
+  let env: Record<string, any>;
+
+  return {
+    name: "netlify/no-index",
+    hooks: {
+      "astro:build:done": async ({ dir }) => {
+        const production = env.CONTEXT === "production";
+
+        // ...
+      },
+    },
+  };
+}
+```
+
+```ts
+import type { AstroIntegration } from "astro";
+import { writeFile } from "node:fs/promises";
+
+export default function integration(): AstroIntegration {
+  let env: Record<string, any>;
+
+  return {
+    name: "netlify/no-index",
+    hooks: {
+      "astro:config:done": ({ config }) => {
+        env = {};
+      },
+      "astro:build:done": async ({ dir }) => {
+        const production = env.CONTEXT === "production";
+
+        // ...
+      },
+    },
+  };
+}
+```
 
 ```ts
 import type { AstroIntegration } from "astro";
 import { loadEnv } from "vite";
-import { fileURLToPath } from "node:url";
 import { writeFile } from "node:fs/promises";
+import { fileURLToPath } from "node:url";
+
+export default function integration(): AstroIntegration {
+  let env: Record<string, any>;
+
+  return {
+    name: "netlify/no-index",
+    hooks: {
+      "astro:config:done": ({ config }) => {
+        env = loadEnv(
+          "dev",
+          config.vite.envDir ?? fileURLToPath(config.root),
+          ""
+        );
+      },
+      // ...
+    },
+  };
+}
+```
+
+```ts
+import type { AstroIntegration } from "astro";
+import { loadEnv } from "vite";
+import { writeFile } from "node:fs/promises";
+import { fileURLToPath } from "node:url";
+
+export default function integration(): AstroIntegration {
+  let mode: string;
+  let env: Record<string, any>;
+
+  return {
+    name: "netlify/no-index",
+    hooks: {
+      "astro:config:done": ({ config }) => {
+        env = loadEnv(
+          mode,
+          config.vite.envDir ?? fileURLToPath(config.root),
+          ""
+        );
+      },
+      // ...
+    },
+  };
+}
+```
+
+```ts
+import type { AstroIntegration } from "astro";
+import { loadEnv } from "vite";
+import { writeFile } from "node:fs/promises";
+import { fileURLToPath } from "node:url";
 
 export default function integration(): AstroIntegration {
   let mode: string;
@@ -118,28 +209,9 @@ export default function integration(): AstroIntegration {
       "astro:config:setup": ({ command }) => {
         mode = command;
       },
-      "astro:config:done": ({ config }) => {
-        env = loadEnv(
-          mode,
-          config.vite.envDir ?? fileURLToPath(config.root),
-          ""
-        );
-      },
-      "astro:build:done": async ({ dir }) => {
-        // Injected from netlify
-        const production = env.CONTEXT === "production";
-
-        if (production) {
-          return;
-        }
-
-        await writeFile(
-          new URL("./robots.txt", dir),
-          "User-agent: *\nDisallow: /",
-          "utf-8"
-        );
-      },
+      // ...
     },
   };
 }
 ```
+````
