feat: refine slides

--- a/slides/1.0.what-is-astro.md
+++ b/slides/1.0.what-is-astro.md
@@ -4,5 +4,5 @@ layout: center
 
 # 1. What is Astro?
 
-Astro is the web framework for <span class="text-gradient">**content-driven**</span> websites, batteries included
+Astro is the web framework for <span class="text-gradient">content-driven</span> websites, batteries included
 
