--- a/slides/1.1.zero-js.md
+++ b/slides/1.1.zero-js.md
@@ -1,6 +1,6 @@
 # 1.1. Zero JavaScript by default
 
-- Astro components are HTML-only templating components with <span class="text-gradient">**no client-side runtime**</span> and use the `.astro` file extension
+- Astro components are HTML-only templating components with <span class="text-gradient">no client-side runtime</span> and use the `.astro` file extension
 - Astro component syntax is a superset of HTML, using a JSX-like syntax
 
     ```astro
