--- a/slides/1.2.server-first.md
+++ b/slides/1.2.server-first.md
@@ -1,6 +1,6 @@
 # 1.2. Server first
 
-- Astro pages, routes, and API endpoints <span class="text-gradient">**will be pre-rendered at build time by default**</span>
+- Astro pages, routes, and API endpoints <span class="text-gradient">will be pre-rendered at build time by default</span>
 - However, you can choose to render some or all of your routes on demand by a server when a route is requested
 
     ```astro
@@ -12,7 +12,7 @@
     <html>
     ```
 
-- Just add an <span class="text-gradient">**adapter**</span> for a server runtime:
+- Just add an <span class="text-gradient">adapter</span> for a server runtime:
 
     <div class="flex gap-8">
 
