--- a/slides/1.4.ui-agnostic.md
+++ b/slides/1.4.ui-agnostic.md
@@ -1,6 +1,6 @@
 # 1.4. UI agnostic
 
-- Build your Astro website <span class="text-gradient">**without sacrificing your favorite UI framework**</span>
+- Build your Astro website <span class="text-gradient">without sacrificing your favorite UI framework</span>
 
     ```astro
     ---
@@ -12,7 +12,7 @@
     ---
     ```
 
-- Use <span class="text-gradient">**client directives**</span> to control how UI framework components are hydrated
+- Use <span class="text-gradient">client directives</span> to control how UI framework components are hydrated
 
     ```astro
     <Header /> <!-- Server rendered by default! -->
