--- a/slides/2.0.what-is-an-integration.md
+++ b/slides/2.0.what-is-an-integration.md
@@ -4,4 +4,4 @@ layout: center
 
 # 2. What is an integration?
 
-It <span class="text-gradient">**adds new functionalities**</span> and behaviors for your project by hooking into Astro's lifecycle
+It <span class="text-gradient">adds new functionalities</span> and behaviors for your project by hooking into Astro's lifecycle
