--- a/slides/2.1.examples.md
+++ b/slides/2.1.examples.md
@@ -1,7 +1,7 @@
 # 2.1. Integrations can...
 
-- Unlock UI frameworks like React and Vue with a renderer (`@astrojs/react`...)
-- Enable on-demand rendering with an SSR adapter (`@astrojs/netlify`...)
+- Unlock UI frameworks like React and Vue with a <span class="text-gradient">renderer</span> (`@astrojs/react`...)
+- Enable on-demand rendering with an SSR <span class="text-gradient">adapter</span> (`@astrojs/netlify`...)
 - Integrate tools like Partytown (`@astrojs/partytown`)
 - Add new features to your project, like automatic sitemap generation (`@astrojs/sitemap`)
-- Write custom code that hooks into the build process, dev server, and more
+- Write <span class="text-gradient">custom code</span> that hooks into the build process, dev server, and more
