--- a/slides/2.2.browse.md
+++ b/slides/2.2.browse.md
@@ -1,6 +1,6 @@
 # 2.2. Where to find them
 
-- Use our integration catalogue! <span class="text-gradient">**https://astro.build/integrations**</span>
+- Use our integration catalogue! <span class="text-gradient">https://astro.build/integrations</span>
 
 ![](../images/integrations-catalogue.png)
 
