--- a/slides/3.2.sitemap.md
+++ b/slides/3.2.sitemap.md
@@ -1,10 +1,10 @@
-# 3.3. Sitemap (official)
+# 3.2. Sitemap (official)
 
 ```sh
 astro add sitemap
 ```
 
-Generates a sitemap based on pages when building.
+Generates a sitemap based on static pages when building:
 
 ```
 dist/
