--- a/slides/1.3.islands.md
+++ b/slides/1.3.islands.md
@@ -1,7 +1,7 @@
 # 1.3. Islands architecture
 
 - Render the majority of your page to fast, static HTML
-- Add <span class="text-gradient">**smaller islands of JavaScript**</span> when interactivity or personalization is needed
+- Add <span class="text-gradient">smaller islands of JavaScript</span> when interactivity or personalization is needed
 
 <div class="grid grid-cols-3 grid-rows-5 gap-2 text-center content-center [&>div]:(flex items-center justify-center)">
     <div class="col-span-3 bg-[#6c33] border-2 border-[#50743ecc] p-2">Header (interactive island)</div>
