--- a/slides/1.5.customizable.md
+++ b/slides/1.5.customizable.md
@@ -4,5 +4,5 @@ layout: center
 
 # 1.5. Customizable
 
-Thanks to hundreds of <span class="text-gradient">**integrations**</span>
+Thanks to hundreds of <span class="text-gradient">integrations</span>
 
