--- a/slides/1.1.zero-js.md
+++ b/slides/1.1.zero-js.md
@@ -5,10 +5,10 @@
 
     ```astro
     ---
-    const { link } = Astro.props
+    const { href } = Astro.props
     ---
     <div>
-        {link && <a {link}>Astro website</a>}
+        {href && <a {href}>Astro website</a>}
     </div>
     ```
 
