fix: light mode

--- a/slides/1.3.islands.md
+++ b/slides/1.3.islands.md
@@ -5,10 +5,10 @@
 
 <div class="grid grid-cols-3 grid-rows-5 gap-2 text-center content-center [&>div]:(flex items-center justify-center)">
     <div class="col-span-3 bg-[#6c33] border-2 border-[#50743ecc] p-2">Header (interactive island)</div>
-    <div class="row-span-3 border-2 border-zinc-500 bg-zinc-900 p-2">Sidebar (static HTML)</div>
-    <div class="col-span-2 row-span-2 border-2 border-zinc-500 bg-zinc-900 p-2">Static content like text, images, etc.</div>
+    <div class="row-span-3 border-2 border-zinc-500 bg-zinc-400 dark:bg-zinc-900 p-2">Sidebar (static HTML)</div>
+    <div class="col-span-2 row-span-2 border-2 border-zinc-500 bg-zinc-400 dark:bg-zinc-900 p-2">Static content like text, images, etc.</div>
     <div class="col-span-2 bg-[#e619a133] border-2 border-[#743e62cc] p-2">Image carousel (interactive island)</div>
-    <div class="col-span-3 border-2 border-zinc-500 bg-zinc-900 p-2">Footer (static HTML)</div>
+    <div class="col-span-3 border-2 border-zinc-500 bg-zinc-400 dark:bg-zinc-900 p-2">Footer (static HTML)</div>
 </div>
 
 
